<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!--android:background="@drawable/main_background"-->

    <com.example.cheaptrip.views.Gauge
        android:id="@+id/tank_indicator"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:padding="64dp"
        android:paddingTop="10dp"
        app:arcColor="@color/color_arc"
        app:arcWidth="8dp"
        app:max="100"
        app:min="-3"
        app:progressColor="@color/color_progress"
        app:progressWidth="12dp"
        app:step="1"
        app:textColor="@color/color_text"
        app:textSize="72sp" />

    <!-- <ImageView
        android:id="@+id/img_gas_pump"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/description_image"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/gas_pump" />-->

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@android:color/transparent"
        android:onClick="showPopup"
        android:src="@android:drawable/ic_menu_manage"
        tools:src="@android:drawable/ic_menu_manage" />

    <Button
        android:id="@+id/btn_car_brand"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tank_indicator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-62dp"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="viewClickHandler"
        android:text="@string/car_brand" />

    <Button
        android:id="@+id/btn_car_model"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btn_car_brand"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-53dp"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="viewClickHandler"
        android:text="@string/car_model" />

    <Button
        android:id="@+id/btn_car_year"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btn_car_model"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-54dp"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:onClick="viewClickHandler"
        android:text="@string/car_year" />


    <EditText
        android:id="@+id/edit_start"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btn_car_year"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="-50dp"
        android:autofillHints="@string/hint_edit_start"

        android:ems="10"
        android:focusable="false"

        android:hint="@string/location_start"
        android:inputType="textPersonName"
        android:onClick="viewClickHandler" />

    <EditText
        android:id="@+id/edit_destination"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/edit_start"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-49dp"
        android:autofillHints="@string/hint_edit_dest"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/location_dest"
        android:inputType="textPersonName"
        android:onClick="viewClickHandler" />

    <Button
        android:id="@+id/btn_start_location"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_alignBottom="@id/edit_start"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/edit_start"
        android:background="@android:drawable/ic_menu_mylocation"
        android:onClick="viewClickHandler" />

    <Button
        android:id="@+id/btn_end_location"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_alignBottom="@id/edit_destination"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/edit_destination"
        android:background="@android:drawable/ic_menu_mylocation"
        android:onClick="viewClickHandler" />

    <Button
        android:id="@+id/btn_find"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/edit_destination"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="-50dp"
        android:background="@color/colorAccent"
        android:drawableEnd="@android:drawable/ic_menu_search"
        android:drawableRight="@android:drawable/ic_menu_search"
        android:onClick="viewClickHandler"
        android:text="@string/btn_find" />


</RelativeLayout>